--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "narsis-react-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Narsi7777.github.io/newOne",
+  "homepage": "https://narsi7777.github.io/bmwlandingpage",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
